--- a/views/index.pug
+++ b/views/index.pug
@@ -19,11 +19,13 @@ block content
               .message this is awesome
         .ui.items.chat
           .item(ng-repeat="message in messages")
-            .content(ng-if="!message.type")
+            .content(ng-if="!message.type.code")
               span [SERVER] &nbsp;
               a.header.name {{ message.userName }} &nbsp;
-              .description.message
+              .description.message(ng-if="message.type.message")
                 | Katıldı
+              .description.message(ng-if="!message.type.message")
+                | Ayrıldı
         .ui.action.input.fluid
           input(type='text' placeholder='Type here...')
           button.ui.button Send
