--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
       .column.twelve.wide
         .ui.stacked.segment.gameArea(ng-click="onClickPlayer($event)")
 
-          .circle.blue(ng-repeat="player in players", ng-style="{'left' : player.position.x, 'top' : player.position.y }", id="{{ player.id }}")
+          .circle.blue(ng-repeat="player in players", ng-style="{'left' : player.position.x + 'px', 'top' : player.position.y + 'px' }", id="{{ player.id }}")
             .relative
               span.name {{ player.userName }}
               // .message
