preparation of chat system

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,13 @@
-body{
-  background-color: #f0f1f6!important;
+body {
+  background-color: #f0f1f6 !important;
 }
 
-.margin-30{
-  margin: 30px 0!important;
+.margin-30 {
+  margin: 30px 0 !important;
 }
 
-.gameArea{
-  min-height:450px;
+.gameArea {
+  min-height: 450px;
   position: relative;
 }
 
@@ -30,21 +30,24 @@ body{
 .blue {
   background-color: #3498db;
 }
+
 .green {
   background-color: #16a085;
 }
+
 .red {
   background-color: #e74c3c;
 }
 
-.circle .relative{
+.circle .relative {
   position: relative;
 }
 
 .circle .relative > .name {
   text-transform: uppercase;
 }
-.circle .relative > .message{
+
+.circle .relative > .message {
   font-size: 11px;
   position: absolute;
   top: -22px;
@@ -57,22 +60,26 @@ body{
   display: inline-block;
 }
 
-.chat{
-  margin-right: 10px!important;
-  margin-left: 10px!important;
+.chat {
+  margin-right: 10px !important;
+  margin-left: 10px !important;
   height: 90px;
-  -webkit-mask-image: -webkit-gradient(linear, left 60%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
-
+  /* -webkit-mask-image: -webkit-gradient(linear, left 60%, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0))); */
+  overflow-y: auto;
 }
-.chat .content{
+
+.chat .content {
   text-align: left;
 }
-.chat .name{
-  font-size: 15px!important;
+
+.chat .name {
+  font-size: 15px !important;
 }
-.chat .message{
+
+.chat .message {
   display: inline;
 }
-.chat .item{
-  margin:.3em 0!important;
+
+.chat .item {
+  margin: .3em 0 !important;
 }
