--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,9 @@ block content
               span.name {{ player.userName }}
               // .message
 
-        .ui.items.chat
+        .ui.items.chat#chat-area
           .item(ng-repeat="message in messages")
+
             .content(ng-if="!message.type.code")
               span [SERVER] &nbsp;
               a.header.name {{ message.userName }} &nbsp;
@@ -25,7 +26,13 @@ block content
                 | Katıldı
               .description.message(ng-if="!message.type.message")
                 | Ayrıldı
-        .ui.action.input.fluid
-          input(type='text' placeholder='Type here...')
-          button.ui.button Send
+
+            .content(ng-if="message.type.code")
+              a.header.name {{ message.userName }} &nbsp;
+              .description.message
+                | {{ message.text }}
+
+        form.ui.action.input.fluid(ng-submit="newMessage()")
+          input(ng-model='message' placeholder='Type here...')
+          button.ui.button(type="submit") Send
 
